# autobot

./: .gitignore  .gitmodules  LICENSE  README.md
src/autobot_bringup/: CMakeLists.txt  package.xml
src/autobot_bringup/config/: autobot_params.yaml
src/autobot_bringup/launch/: autobot_sim.launch.py  gz_sim.launch.py
src/autobot_description/: CMakeLists.txt  package.xml
src/autobot_description/config/: controllers.yaml
src/autobot_description/launch/: display.launch.py  sim.launch.py
src/autobot_description/xacro/: autobot_core.xacro  gazebo_diff_drive.xacro  gazebo_references.xacro  ros2_control.xacro  sensors.xacro
src/autobot_gazebo/: CMakeLists.txt  package.xml
src/autobot_gazebo/config/: autobot_gz_bridge.yaml  gazebo_config.config
src/autobot_laser_tools/: CMakeLists.txt  package.xml
src/autobot_laser_tools/include/autobot_laser_tools/: laser_merger_node.hpp
src/autobot_laser_tools/src/: laser_merger_node.cpp
